# chatbot

./: .gitignore  pyproject.toml  pyvenv.cfg
chatbot/: bot-openai.py  bot-pplx.py  bot.py  loga-bot.py
chatbot/data/: anmeldung.md  oeffnungszeiten.md  satzung.md
