[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["André Wendler <42637005+a-wendler@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
openai = "^1.11.1"
llama-index = "^0.9.44"
nltk = "^3.8.1"
docx2txt = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
